Fix nav positioning on mobile safari
Safari vh includes the url bar area - using % correctly adjusts this to be the site area

--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ h6.home-subitem {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 50vh;
+  height: 50%;
   min-height: 30vw;
 }
 
